RESOLVED FIXED256168
[iOS] YouTube playback can unexpectedly interrupt other apps playing audio
https://bugs.webkit.org/show_bug.cgi?id=256168
Summary [iOS] YouTube playback can unexpectedly interrupt other apps playing audio
Aditya Keerthi
Reported 2023-05-01 10:02:39 PDT
On an iPad: 1. Begin playback of a video on YouTube. 2. Open another app like Music, and play some audio while the video is playing. 3. Play the YouTube video again, as it will be paused following (2). 4. Play the audio in Music again, as it will be paused following (3). Observe that the audio from Music gets interrupted by the YouTube video.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-05-01 10:03:04 PDT
Aditya Keerthi
Comment 2 2023-05-01 10:05:22 PDT
EWS
Comment 3 2023-05-08 11:44:50 PDT
Committed 263810@main (b300e9f2c444): <https://commits.webkit.org/263810@main> Reviewed commits have been landed. Closing PR #13330 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.